Update User uuid logic
